--- a/part3/phonebook-backend/package.json
+++ b/part3/phonebook-backend/package.json
@@ -8,6 +8,7 @@
     "start": "node src/index.js",
     "dev": "nodemon src/index.js",
     "build:ui": "rm -rf dist && cd ../../part2/phonebook && npm run build && cp -r dist  ../../part3/phonebook-backend",
+    "build:render": "npm i && cd ../../part2/phonebook && npm i && npm run build && cp -r dist  ../../part3/phonebook-backend",
     "build:ui:win": "@powershell Remove-Item -Recurse -Force dist && cd ../../part2/phonebook && npm run build && @powershell Copy-Item dist -Recurse ../../part3/phonebook-backend",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
