--- a/part4/bloglist/.gitignore
+++ b/part4/bloglist/.gitignore
@@ -133,3 +133,4 @@ dist
 /.idea/dataSources/92d2eef9-2e28-4bd0-b982-981f17268f80.xml
 /.idea/dataSources.local.xml
 /.idea/inspectionProfiles/Project_Default.xml
+/.idea/dataSources/491ce7a0-e977-4ac4-aa91-9e7830d438b6.xml
