--- a/part4/bloglist/package.json
+++ b/part4/bloglist/package.json
@@ -9,12 +9,16 @@
   },
   "dependencies": {
     "@types/mongoose": "^5.11.97",
+    "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "4.18.2",
     "express-async-errors": "^3.1.1",
+    "express-jwt": "^8.4.1",
+    "jsonwebtoken": "^9.0.0",
     "lodash": "^4.17.21",
     "mongoose": "^7.3.1",
+    "mongoose-unique-validator": "^4.0.0",
     "morgan": "~1.9.1"
   },
   "devDependencies": {
