--- a/part4/bloglist/package.json
+++ b/part4/bloglist/package.json
@@ -5,9 +5,12 @@
   "scripts": {
     "start": "NODE_ENV=production node src/index.js",
     "dev": "NODE_ENV=development nodemon src/index.js",
-    "test": "NODE_ENV=test jest --verbose --runInBand"
+    "test": "NODE_ENV=test jest --verbose --runInBand",
+    "start:test": "NODE_ENV=test node src/index.js",
+    "build:ui": "rm -rf dist && cd ../../part5/bloglist-frontend && npm run build && cp -r dist ../../part4/bloglist"
   },
   "dependencies": {
+    "@cypress/vite-dev-server": "^5.0.5",
     "@types/mongoose": "^5.11.97",
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
@@ -22,6 +25,8 @@
     "morgan": "~1.9.1"
   },
   "devDependencies": {
+    "eslint-plugin-cypress": "^2.13.3",
+    "eslint-plugin-jest": "^27.2.2",
     "jest": "^29.5.0",
     "nodemon": "^2.0.22",
     "supertest": "^6.3.3"
