--- a/part7/bloglist-redux/package.json
+++ b/part7/bloglist-redux/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@cypress/vite-dev-server": "^5.0.5",
+    "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.4.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
@@ -34,12 +35,6 @@
     "babel-jest": "^18.0.0",
     "cypress": "^12.16.0",
     "cypress-vite": "^1.4.0",
-    "eslint": "^8.38.0",
-    "eslint-plugin-cypress": "^2.13.3",
-    "eslint-plugin-jest": "^27.2.2",
-    "eslint-plugin-react": "^7.25.3",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.3.4",
     "jest": "^23.6.0",
     "jest-environment-jsdom": "^29.5.0",
     "react-test-renderer": "^18.2.0",
