--- a/part7/bloglist-redux/package.json
+++ b/part7/bloglist-redux/package.json
@@ -19,10 +19,12 @@
     "@cypress/vite-dev-server": "^5.0.5",
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.4.0",
+    "lodash": "^4.17.21",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-redux": "^8.1.1"
+    "react-redux": "^8.1.1",
+    "react-router-dom": "^6.14.0"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.22.5",
