--- a/part8/library-backend/package.json
+++ b/part8/library-backend/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node src/index.js",
+    "dev": "nodemon src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -11,6 +13,9 @@
   "license": "ISC",
   "dependencies": {
     "@apollo/server": "^4.7.5",
-    "graphql": "^16.7.1"
+    "graphql": "^16.7.1",
+    "morgan": "^1.10.0",
+    "nodemon": "^2.0.22",
+    "uuid": "^9.0.0"
   }
 }
