--- a/part8/library-backend/package.json
+++ b/part8/library-backend/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node src/index.js",
-    "dev": "nodemon src/index.js",
+    "dev": "nodemon src/library-backend.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -13,7 +13,12 @@
   "license": "ISC",
   "dependencies": {
     "@apollo/server": "^4.7.5",
+    "dotenv": "^16.3.1",
     "graphql": "^16.7.1",
+    "jsonwebtoken": "^9.0.0",
+    "lodash": "^4.17.21",
+    "mongoose": "^7.3.1",
+    "mongoose-unique-validator": "^4.0.0",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.22",
     "uuid": "^9.0.0"
