--- a/part9/patientor-backend/package.json
+++ b/part9/patientor-backend/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@types/cors": "^2.8.13",
     "cors": "^2.8.5",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "uuid": "^9.0.0"
   }
 }
