--- a/part9/patientor-backend/package.json
+++ b/part9/patientor-backend/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "@types/cors": "^2.8.13",
+    "@types/uuid": "^9.0.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "uuid": "^9.0.0"
