--- a/part9/patientor-backend/tsconfig.json
+++ b/part9/patientor-backend/tsconfig.json
@@ -4,6 +4,7 @@
     "outDir": "./build/",
     "module": "commonjs",
     "strict": true,
+    "sourceMap": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noImplicitReturns": true,
