--- a/part9/patientor-backend/package.json
+++ b/part9/patientor-backend/package.json
@@ -22,9 +22,11 @@
   },
   "dependencies": {
     "@types/cors": "^2.8.13",
+    "@types/morgan": "^1.9.4",
     "@types/uuid": "^9.0.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "morgan": "^1.10.0",
     "uuid": "^9.0.0"
   }
 }
